@@ -9,6 +9,7 @@ Version 1.1.7 to be released
 - Bug: Fixed a bug in CCheckBoxColumn, "check all" checkbox was not being checked/unchecked when needed (mdomba)
 - Enh: Added CController::createInlineAction, CInlineAction::inputParams and errorMessage to allow easier override (Qiang)
 - Enh #801: Added RESTful URL management (Qiang)
+- Enh #1999: Added CCaptchaAction::offset property in order to decrease or increase the readability of the captcha (Y!!)
 - Chg #2001: CGridView now renders footer after the body content (Qiang)
 
 Version 1.1.6 January 16, 2011
